--- a/html_css/visualizations.html
+++ b/html_css/visualizations.html
@@ -95,6 +95,32 @@
 				</select>
 				<div id='lineGraphPlot'></div>
 			</div>
+			<div id="pieChart">
+				<h3>Pie Chart for Monthly Averages</h3>
+				<select id="monthSelect">
+				  <option value="2022-01">January 2022</option>
+				  <option value="2022-02">February 2022</option>
+				  <option value="2022-03">March 2022</option>
+				  <option value="2022-04">April 2022</option>
+				  <option value="2022-05">May 2022</option>
+				  <option value="2022-06">June 2022</option>
+				  <option value="2022-07">July 2022</option>
+				  <option value="2022-08">August 2022</option>
+				  <option value="2022-09">September 2022</option>
+				  <option value="2022-10">October 2022</option>
+				  <option value="2022-11">November 2022</option>
+				  <option value="2022-12">December 2022</option>
+				  <option value="2023-01">January 2023</option>
+				  <option value="2023-02">February 2023</option>
+				  <option value="2023-03">March 2023</option>
+				  <option value="2023-04">April 2023</option>
+				  <option value="2023-05">May 2023</option>
+				  <option value="2023-06">June 2023</option>
+				  <option value="2023-07">July 2023</option>
+				  <option value="2023-08">August 2023</option>
+				</select>
+			  </div>
+			  <div id="pieChartPlot"></div>
 		
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -106,6 +132,7 @@
 		<script src="./static/js/bonus.js"></script>
 		<script src="./line_graph.js"></script>
 		<script src="./bar_pie_chart.js"></script>
+		<script src="./bar_pie_chartv2.js"></script>
 		<script src="./heatmap_slider.js"></script>
 	</body>
 </html>
