--- a/html_css/visualizations.html
+++ b/html_css/visualizations.html
@@ -91,7 +91,7 @@
 					<option value="SO2">so2</option>
 					<option value="pm2_5">pm2_5</option>
 					<option value="pm10">pm10</option>
-					<option value="nh3">nh3</option>
+					<option value="NH3">nh3</option>
 				</select>
 				<div id='lineGraphPlot'></div>
 			</div>
