--- a/html_css/visualizations.html
+++ b/html_css/visualizations.html
@@ -9,29 +9,6 @@
 		<link rel="stylesheet" href="css/custom.css"/>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css" />
-		<style>
-            .legend ul{
-                padding: 0; list-style: none;
-            }
-            .legend li{
-                padding: 5px;
-            }
-            .legend li.aqi1{
-                background-color: #00ffbc;
-            }
-            .legend li.aqi2{
-                background-color: #ffff00;
-            }
-            .legend li.aqi3{
-                background-color: #ffb100;
-            }
-			.legend li.aqi4{
-                background-color: #ff7300;
-            }
-            .legend li.aqi5{
-                background-color: #ff0000;
-            }
-        </style>
 	</head>
 
 	<body>
@@ -82,7 +59,7 @@
 					<option value="SO2">so2</option>
 					<option value="pm2_5">pm2_5</option>
 					<option value="pm10">pm10</option>
-					<option value="nh3">nh3</option>
+					<option value="NH3">nh3</option>
 				</select>
 				<div id='lineGraphPlot'></div>
 			</div>
