--- a/html_css/home_page.html
+++ b/html_css/home_page.html
@@ -42,6 +42,7 @@
 					<li> Heatmap with dropdown</li>
 					<li> Bar chart showing the composition of pollutants in the atmosphere (by day/ month)</li>
 					<li> Line graph for individual pollutants</li>
+					<li> Pie Chart to show the composition of pollutants in the atmosphere</li>
 				</ol>
 
 				<h2>Group 2 Team Members </h2>
