--- a/html_css/home_page.html
+++ b/html_css/home_page.html
@@ -37,7 +37,7 @@
 		  <div class="row">
 			<div class="col-md-6">
 			  <h2>Visualizations</h2>
-			  <p > Learn more about the impact of Canadian wild fires through our threee main reports.
+			  <p > Learn more about the impact of Canadian wild fires through our four main reports.
 				<ol>
 					<li> Heatmap with dropdown</li>
 					<li> Bar chart showing the composition of pollutants in the atmosphere (by day/ month)</li>
